Win improved, Linux started and being tested atm